--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -173,9 +173,19 @@ GtkTreeView .separator:window-unfocused,
     background-color: @theme_bg_color;
 }
 
+.pane-separator:window-unfocused,
+.pane-separator:prelight:window-unfocused {
+    background-color: @theme_unfocused_bg_color;
+}
+
 .notebook .pane-separator,
 .notebook .pane-separator:prelight {
     background-color: @theme_base_color;
+}
+
+.notebook .pane-separator:window-unfocused,
+.notebook .pane-separator:prelight:window-unfocused {
+    background-color: @theme_unfocused_base_color;
 }
 
 /****************
